              work with planar diagram codes.  The "magic" constructor that
              takes a string can now also work with planar diagram codes.
            - New routines gaussData(), orientedGaussData(), jenkinsData(),
              dtData(), and fromJenkins(Iterator, Iterator) for working with
              knot/link codes in machine-readable format.
            - Routine fromData() now returns by value, and throws an exception
              on error (it used to return a newly allocated pointer that was
              null on error).
            - Added a variant of fromData() that takes iterator pairs,
              which allows the data to be constructed at runtime.
            - New routine brief(std::ostream&) to complement brief().
            - New alias fromSig(), which is is identical to fromKnotSig().
            - Class constants for Jones / HOMFLY-PT variable strings are
              now constexpr.
            - Renamed swapContents() to swap(); the old name is now a
              deprecated alias.  Also added a global regina::swap(Link&, Link&).
            - Overhauled rewrite() to be faster, more generic, and support
              actions that take a knot signature as well as a full knot
              diagram.  This function is now also available through Python,
              and can take a pure Python function as its action argument.
              It no longer runs in the background (even if a progress tracker
              is passed), and it now requires as a precondition that the link
              has at most one component (throwing an exception otherwise).
            - Routine simplifyExhaustive() no longer runs in the background
              (even if a progress tracker is passed), and it now throws an
              exception if the link has multiple components.
            - Routine useTreeDecomposition() now takes its argument by
              value, not by const reference.